Add certificate endpoint to swagger
